@@ -1,6 +1,7 @@
 package com.tambo.tambo_delivery_backend.mapper;
 
-import java.util.List;
+import java.util.Collections;
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Component;
 
@@ -16,21 +17,23 @@ public class CategoryMapper {
     public static Category toEntity(CategoryRequestDTO dto) {
         Category category = new Category();
         category.setName(dto.getName());
-        category.setCode(dto.getCode());
+        category.setImageUrl(dto.getImageUrl());
         category.setDescription(dto.getDescription());
 
-        List<CategoryType> types = dto.getCategoryTypes().stream()
-                .map(typeDTO -> {
-                    CategoryType type = new CategoryType();
-                    type.setName(typeDTO.getName());
-                    type.setCode(typeDTO.getCode());
-                    type.setDescription(typeDTO.getDescription());
-                    type.setCategory(category);
-                    return type;
-                })
-                .toList();
+        // Mapear los tipos de categoría si existen
+        if (dto.getCategoryTypes() != null && !dto.getCategoryTypes().isEmpty()) {
+            var types = dto.getCategoryTypes().stream()
+                    .map(typeDTO -> {
+                        CategoryType type = new CategoryType();
+                        type.setName(typeDTO.getName());
+                        type.setDescription(typeDTO.getDescription());
+                        type.setCategory(category); // Establecer la relación bidireccional
+                        return type;
+                    })
+                    .collect(Collectors.toList());
+            category.setCategoryTypes(types);
+        }
 
-        category.setCategoryTypes(types);
         return category;
     }
 
@@ -38,16 +41,19 @@ public class CategoryMapper {
         return CategoryDTO.builder()
                 .id(category.getId())
                 .name(category.getName())
-                .code(category.getCode())
+                .imageUrl(category.getImageUrl())
                 .description(category.getDescription())
-                .categoryTypes(category.getCategoryTypes().stream()
-                        .map(type -> CategoryTypeDTO.builder()
+                .categoryTypes(
+                    category.getCategoryTypes() != null 
+                        ? category.getCategoryTypes().stream()
+                            .map(type -> CategoryTypeDTO.builder()
                                 .id(type.getId())
                                 .name(type.getName())
-                                .code(type.getCode())
                                 .description(type.getDescription())
                                 .build())
-                        .toList())
+                            .collect(Collectors.toList())
+                        : Collections.emptyList()
+                )
                 .build();
     }
 
